feat(<home><--Adding image#home__section--five and style corresponding-->)

--- a/styles/css/home/vtex.store-components.css
+++ b/styles/css/home/vtex.store-components.css
@@ -3,3 +3,9 @@
    width: 97%;
    margin: 37px auto 0 auto;
 }
+
+.imageElement--home__image--section--five{
+   display: block;
+   width: 96%;
+   margin: 37px auto 0 auto;
+}
