--- a/styles/css/home/home-flex-layout/vtex.flex-layout.css
+++ b/styles/css/home/home-flex-layout/vtex.flex-layout.css
@@ -1,7 +1,24 @@
-.flexRow--flex-layout--section--three{
-  padding: 88px 15px 0 15px; 
+.flexRow--flex-layout--section--three {
+  padding: 88px 15px 0 15px;
 }
 
 .flexRow--flex-layout--section--three .stretchChildrenWidth {
   padding: 0px 15px;
 }
+
+.flexRowContent--flex-layout__slider--section--six {
+  flex-direction: column;
+  align-items   : center;
+  margin-top: 30px;
+}
+
+.flexRowContent--flex-layout__slider--section--six :first-child {
+  width: auto !important;
+}
+
+.flexRowContent--slider__section--six--categories{
+  height: 25px !important;
+  margin-top: 5px; 
+}
+
+
