feat(<header>)<--Adds a slider to the header top layout mobile-->

--- a/styles/css/header/vtex.store-header.css
+++ b/styles/css/header/vtex.store-header.css
@@ -3,6 +3,13 @@
   height    : 30px;
 }
 
+.headerRowBackground--header__banner--top--mobile {
+  display: flex;
+  background: #852314;
+  height: 3rem;
+  text-align: center;
+}
+
 .headerRowContainer--banner__top {
   height         : 30px;
   justify-content: center;
