--- a/styles/css/home/vtex.flex-layout.css
+++ b/styles/css/home/vtex.flex-layout.css
@@ -20,3 +20,16 @@
   height    : 25px !important;
   margin-top: 5px;
 }
+
+.flexRowContent--home__video--section--one {
+  flex-direction: column;
+  position      : relative;
+}
+
+.flexRowContent--home__video--section--one .stretchChildrenWidth:nth-child(even) {
+  width: 100% !important;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 95px;
+}
