--- a/styles/css/header/vtex.store-components.css
+++ b/styles/css/header/vtex.store-components.css
@@ -5,3 +5,34 @@
 .logoContainer--header__bottom--logo {
   padding: 0;
 }
+
+.searchBarInnerContainer--header__bottom--search {
+  display: contents;
+}
+
+.autoCompleteOuterContainer--header__bottom--search :global(.vtex-styleguide-9-x-input) {
+  border-radius : 0;
+  border-bottom : 1px solid black;
+  font-size     : 13px;
+  padding       : 0;
+  padding-bottom: 5px;
+  padding-left: 9px;
+  align-self    : flex-end;
+  width: 15vw;
+}
+
+.autoCompleteOuterContainer--header__bottom--search :global(.vtex-input-prefix__group) {
+  border       : none;
+  outline      : none;
+  border-radius: 0;
+}
+
+.autoCompleteOuterContainer--header__bottom--search :global(.vtex-input__suffix) {
+  padding: 0;
+  margin-left: 10px;
+  margin-right: 5px;
+}
+
+.searchBarIcon--header__bottom--search--search {
+  padding: 0;
+}
