feat(<header>)<--Adds icons to login and minicart components, and minor styles to input of search-bar component-->

--- a/styles/css/header/vtex.flex-layout.css
+++ b/styles/css/header/vtex.flex-layout.css
@@ -54,3 +54,11 @@
 .flexColChild--flex__menu--departments--links {
   height: auto !important;
 }
+
+.flexRowContent--header__bottom--container :global(.vtex-button) {
+   width: 30px;
+}
+
+.flexRowContent--header__bottom--container :global(.vtex-button__label) {
+  padding: 0;
+}
