feat(<header-minicart-desktop>)<--Add minicart. v2 and its product-list for product renderization, all with their corresponding styles-->

--- a/styles/css/header/vtex.minicart.css
+++ b/styles/css/header/vtex.minicart.css
@@ -1,4 +1,18 @@
-.openIconContainer--header__bottom--minicart {
+.openIconContainer--header__bottom--minicat {
   padding: 0;
+  width  : 25px;
+}
+
+.openIconContainer--header__bottom--minicat :global(.vtex-button__label) {
+  padding: 0;
+}
+
+.minicartQuantityBadge--header__bottom--minicat {
+  background: transparent;
+  color     : black;
+}
+
+.minicartProductListContainer {
+  padding: 17px;
 }
 
