--- a/styles/css/foooter/vtex.flex-layout.css
+++ b/styles/css/foooter/vtex.flex-layout.css
@@ -1,4 +1,4 @@
-.flexCol--foofooter-container__info {
+.flexCol--footer-container__info {
   text-align: center;
 }
 
@@ -12,4 +12,15 @@
 
 .flexCol--footer-container__menu :global(.vtex-menu-2-x-styledLinkContainer) {
   margin-left: 0;
+}
+
+.flexCol--footer-mobile-container__menu--links {
+    border-bottom: 1px solid #000;
+    padding: 10px 5px;
+    margin-top: 5px;
+}
+
+.flexCol--footer-mobile-container__info {
+  text-align: center;
+  margin-top: 40px;
 }
