--- a/styles/css/header/vtex.menu.css
+++ b/styles/css/header/vtex.menu.css
@@ -1,64 +1,15 @@
-.menuContainer--header__bottom--menu .styledLink {
-  font-size     : 14px;
-  letter-spacing: 1px;
-}
-
-.menuContainer--header__bottom--menu .styledLinkContainer {
-  margin : 0;
-  padding: 8px;
-}
-
-.menuItem--submenu__department--items .styledLinkContainer {
-  padding       : 3px;
-  padding-bottom: 8px;
-}
-
-.menuContainerNav--header__bottom--menu {
-  display: flex;
-}
-
-.menuContainer--header__bottom--menu {
-  align-self: center;
-}
-
-.submenuWrapper--menu__submenu--department {
-  flex-direction: column;
-  padding       : 0;
-  margin-top    : 5px;
-}
-
 .menuItem--submenu__department--items .submenuContainer,
 .submenu--menu__submenu--department {
+  display: contents;
+}
+
+.menuItem--submenu__department--items .submenuWrapper .submenu {
   display: contents;
 }
 
 .submenu--menu__submenu--department .menuContainerNav {
   min-width: 34%;
   position : relative;
-}
-
-.menuContainerNav--submenu__department--items--credit {
-  width: 100%;
-}
-
-.menuContainer--submenu__department--items {
-  width       : 50%;
-  height      : 100%;
-  border-right: 2px solid #ccc;
-  overflow: hidden;
-}
-
-.menuContainer--submenu__department--items--credit {
-  height      : 100%;
-  border-right: 2px solid #ccc;
-}
-
-.styledLinkContent--submenu__department--items {
-    white-space: normal;
-}
-
-.styledLinkContainer--submenu__department--items .submenu {
-  justify-content: flex-start;
 }
 
 .menuItem--submenu__department--items .submenuWrapper {
@@ -69,11 +20,17 @@
   background: transparent;
 }
 
-.menuItem--submenu__department--items .submenuWrapper .submenu {
-  display: contents;
-}
-
 .styledLinkContent--link_menu_departments {
   font-weight: bold;
 }
 
+.menuContainer--submenu__department--items {
+  width       : 50%;
+  min-height      : 54vh;
+  border-right: 2px solid #ccc;
+  overflow: hidden;
+}
+
+.styledLinkContent--submenu__department--items {
+  white-space: normal;
+}
