--- a/styles/css/header/vtex.store-link.css
+++ b/styles/css/header/vtex.store-link.css
@@ -2,6 +2,7 @@
   text-decoration: none;
   color          : #fff;
   width          : auto;
+  text-align: center;
 }
 
 .link--link_menu_departments {
