--- a/styles/css/foooter/vtex.flex-layout.css
+++ b/styles/css/foooter/vtex.flex-layout.css
@@ -1,3 +1,5 @@
+/* DESKTOP */ 
+
 .flexCol--footer-container__info {
   text-align: center;
 }
@@ -8,19 +10,55 @@
 
 .flexCol--footer-container__menu--links {
   padding-top: 20px;
+  height     : fit-content;
 }
 
 .flexCol--footer-container__menu :global(.vtex-menu-2-x-styledLinkContainer) {
   margin-left: 0;
 }
 
-.flexCol--footer-mobile-container__menu--links {
-    border-bottom: 1px solid #000;
-    padding: 10px 5px;
-    margin-top: 5px;
+
+.flexColChild--footer-container__menu :global(.vtex-menu-2-x-styledLinkContent) {
+  width      : fit-content;
+  font-size  : 13px;
+  color      : #7F7F7F;
+  font-weight: 400;
 }
 
+.flexColChild--footer-container__menu :global(.vtex-menu-2-x-styledLinkContent):hover {
+  border-bottom: 1px solid #000;
+}
+
+.flexRow--footer-container__menu {
+  height       : max-content;
+  margin-bottom: 80px;
+}
+
+.flexRowContent--footer-container__contact :global(.vtex-rich-text-0-x-paragraph) {
+  font-size     : 16px;
+  letter-spacing: 0;
+  
+}
+
+/* MOBILE */
+
+.flexRowContent--mobile__footer-container--contact :global(.vtex-rich-text-0-x-paragraph) {
+     letter-spacing: 0;
+     font-size: 16px;
+     margin-top: 60px;
+} 
+
+.flexCol--footer-mobile-container__menu--links {
+  border-bottom : 1px solid #000;
+  padding       : 25px 5px;
+  margin-top    : 5px;
+  font-size     : 13px;
+  letter-spacing: 3px;
+}
+
+
 .flexCol--footer-mobile-container__info {
-  text-align: center;
-  margin-top: 40px;
+  text-align    : center;
+  padding-top   : 70px;
+  padding-bottom: 74px;
 }
