--- a/styles/css/header/vtex.minicart.css
+++ b/styles/css/header/vtex.minicart.css
@@ -26,3 +26,10 @@
 .minicartContainer--header__bottom--minicat :global(.vtex-button__label ) {
    margin: 0;
 }
+
+/* MOBILE */
+
+.minicartIconContainer :global(.vtex-store-icons-0-x-cartIcon--mobile__menu-icons) {
+   width: 5vw;
+   height: 20px;
+} 
