--- a/styles/css/home/banner-fly-up/vtex.store-link.css
+++ b/styles/css/home/banner-fly-up/vtex.store-link.css
@@ -11,3 +11,11 @@
   color         : #000;
   border        : none;
 }
+
+.link--desktop__fly-up--button {
+  font-size     : 12px;
+  text-transform: lowercase;
+  background    : #fff;
+  color         : #000;
+  border        : none;
+}
